samples/_failures_safe/1761170115_463022_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ac1a73e.c: In function ‘main’:
./samples/SAFE/__tmp_2ac1a73e.c:148:9: error: expected expression at end of input
  148 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_2ac1a73e.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2ac1a73e.c:148:9: error: expected declaration or statement at end of input
